--- a/css/style.css
+++ b/css/style.css
@@ -380,11 +380,15 @@
                 width: 25%;
             }
             
-            @media screen and (max-width: 700px){
+            @media only screen and (max-width: 768px){
                 .filter-object select{
                     width: 100%;
                     margin: 5px;
                 }
+				
+				.filter-object{
+					flex-wrap: wrap;
+				}
                 
                 .search-container{
                     width: 100%;
